Fixed the scrollbar issue

--- a/client/styles/components/sidebar/community_selector.scss
+++ b/client/styles/components/sidebar/community_selector.scss
@@ -35,7 +35,6 @@
     }
     .cui-popover-content {
         max-height: 100vh;
-        overflow-y: auto;
         text-align: left;
         // @include xs-max {
         //     margin: 0 10px;
@@ -48,6 +47,7 @@
         border: none;
         max-width: 360px;
         width: 360px;
+        overflow-y: auto;
         padding: 24px 4px 8px;
         // @include xs-max {
         //     max-width: 100%;
@@ -95,7 +95,6 @@
         }
         .cui-list-item-content-right {
             white-space: nowrap;
-            overflow: hidden;
             text-overflow: ellipsis;
             .User {
                 position: relative;
